# ApacheBeamInferenceML

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml
notebooks/: run_inference.ipynb
scripts/: README.md  file_setup.sh  setup.sh
utils/: inference.py  parsing.py  pipeline_options.py
