[project]
name = "apachebeaminferenceml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-beam[gcp]>=2.66.0",
    "ipykernel>=6.29.5",
    "pandas>=2.3.1",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "torch>=2.7.1",
    "transformers==4.44.2",
]
